# books_library

./: .env-example  .gitignore  AGENTS.md  Dockerfile  README.md  book_columns.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  task.md
app/: composition.py  main.py  mypy.ini  test_output.txt
app/api/v1/: books.py  dependencies.py  export.py  v1_router.py
app/api/v1/schemas/: book_search.py  export.py
app/config/: config.py
app/domain/: exceptions.py  util.py
app/domain/interfaces/: __init__.py  book_ifaces.py  email_sender.py  storage.py
app/domain/models/: __init__.py  base_domain_model.py  book.py
app/domain/services/: book_service.py
app/infrastructure/db/: db.py  fts.py  fts_query.py  wait_for_db.py
app/infrastructure/email/: n8n_email_sender.py
app/infrastructure/repositories/: __init__.py  book_repo.py
app/infrastructure/search/: __init__.py  books_index.py  es_client.py
app/infrastructure/storage/: s3_storage.py
app/mcp_server/: __init__.py  schemas.py  server.py
app/tests/fixtures/: akunin_books.json
app/tests/integration/: conftest.py  test_book_search.py  test_export.py  test_health.py  test_user_api.py
app/tests/unit/: conftest.py  test_books_search_query.py  test_export_slug.py  test_fts_init.py  test_fts_query.py  test_mcp_server.py  test_n8n_email_sender.py  test_repo_sqlalchemy_mixins.py  test_send_book_to_email.py  test_settings_api_root_path.py  test_settings_books_archives_path.py
books/: 179496.fb2
docs/: architecture.md  infrastructure.md  rules.md
scripts/: extract_fixture.py  setup_search.py
(+4 files in other folders)
